# QTSnake

./: CMakeLists.txt  CMakeLists.txt.user.268a49e  Game.cpp  Game.h  GameField.cpp  GameField.h  GameWindow.cpp  GameWindow.h  Snake.cpp  Snake.h  cell.cpp  cell.h  gameRules.cpp  main.cpp
ClientSrc/: CMakeLists.txt  CellView.cpp  CellView.h  ClientNetworkManager.cpp  ClientNetworkManager.h  CreateRoomDialog.cpp  Game.cpp  Game.h  GameField.cpp  GameField.h  GameFieldView.h  GameWindow.cpp  GameWindow.h  IRequestHandler.cpp  IRequestHandler.h  InputHandler.cpp  InputHandler.h  MainMenu.cpp  MainMenu.h  MultiplayerMenu.cpp  MultiplayerMenu.h  README.md  RequestRouter.h  Snake.cpp  Snake.h  cell.cpp  gameRules.cpp  gameRules.h  main.cpp
ClientSrc/FieldDir/: GameField.cpp  GameFieldView.cpp  cell.h
ClientSrc/MultiplayerDir/: ClientNetworkManager.cpp  ClientNetworkManager.h  CreateRoomDialog.h  IRequestHandler.cpp  IRequestHandler.h  MultiPlayerDialog.cpp  MultiPlayerDialog.h  MultiPlayerGame.cpp  MultiPlayerGame.h  MultiplayerMenu.cpp  RequestRouter.cpp  RequestRouter.h
ClientSrc/SingleplayerDir/: Game.cpp  Game.h  GameSizeDialogue.cpp  GameSizeDialogue.h  Snake.h  gameRules.cpp  gameRules.h
ServerSrc/: CMakeLists.txt
ServerSrc/Server/: CMakeLists.txt  Cell.cpp  Cell.h  Game.cpp  Game.h  GameField.cpp  GameField.h  GameRules.cpp  GameRules.h  IRequestHandler.cpp  IRequestHandler.h  MessageHandler.cpp  RequestRouter.cpp  RequestRouter.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h  Snake.cpp  Snake.h  server.cpp  server.h
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: codemodel-v2-e60bcdfecde8080f8661.json  index-2024-11-21T18-31-40-0127.json  target-Server-Debug-19c90199b501b1ffa0da.json
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-2faa848cfc3dcd99af96.json  cmakeFiles-v1-0aba253d09dcf109c03b.json  codemodel-v2-51e4e47bc00c1dc76131.json  index-2024-11-21T13-51-29-0264.json  target-Server-Debug-7291fa23d66571a4f497.json  target-Server_autogen-Debug-c756cbf91398af4f51e1.json  target-Server_autogen_timestamp_deps-Debug-00c944853224d8079ca8.json
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: MessageHandler.cpp.E1F26BCF3F300F2F.idx  MessageHandler.h.9D347255D23AD0E8.idx  QCoreApplication.8C9D7186F4FD3C79.idx  Session.cpp.4CDA6C9311583131.idx  Session.h.B8567AB7230BAFD1.idx  SessionManager.cpp.91FF0B3F2921F8AC.idx  SessionManager.h.64A0BA5A684BFACA.idx  alloc_traits.h.8C5507ED2386C07D.idx  main.cpp.02ADA86270F59DBD.idx  qchar.h.60E142F890541D84.idx  qcontainerfwd.h.F041D3BF95929BC4.idx  qcontiguouscache.h.E4BDA730E9D96352.idx  qcoreapplication.h.4286C0BAB8119DD1.idx  qcoreevent.h.EC6A2D60C4E5A5A4.idx  qdebug.h.D92C3D62FDC984B2.idx  (+20 more)
ServerSrc/build-Server-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/Server_autogen/: deps
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.cmake/api/v1/reply/: cache-v2-e74f14ed85541fd1cf70.json  cmakeFiles-v1-dddf8b8024a70b8d656c.json  codemodel-v2-daa9fd3162cd9681806e.json  directory-.-Debug-710000c058b112210f5d.json  index-2024-11-18T14-12-10-0419.json  target-GameWindow-Debug-be8f7226ca1d95f8ddea.json  target-GameWindow_autogen-Debug-8890b8d1394c11274c37.json  target-GameWindow_autogen_timestamp_deps-Debug-ff43f227760c6518ac5f.json
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: Game.cpp.2ED863EDA91CD1E6.idx  Game.h.EB2A097C0C794DF9.idx  GameField.cpp.28DBD22BFE68D143.idx  GameField.h.FAD6C42176EDB8CB.idx  GameOverDialog.cpp.45DB9FBB2F477F88.idx  GameOverDialog.h.25C21A1804E381D0.idx  GameWindow.cpp.5BB1014329CF40B0.idx  GameWindow.h.9AAD5C2CCDEED7DF.idx  QBrush.B1D8E8DF5D9E2D73.idx  QDialog.E94C2D8CFEBAD790.idx  QGraphicsItem.F3F88C0DDD968BE6.idx  QGraphicsScene.0981D7FE4FD876D3.idx  QGraphicsView.CB2B7C909F343F6A.idx  QKeyEvent.18B0705DCBB0FDCF.idx  QObject.C7E704DB2A1CF4EB.idx  QRandomGenerator.7CAC69BA2CDB7141.idx  QVector.597C80CB376231B4.idx  Snake.cpp.47E2BB35E430C3AB.idx  Snake.h.A8AFBB974B988FC0.idx  cell.cpp.ECF53B7FBF1922BB.idx  cell.h.DE4CEB3F37461CCB.idx  gameRules.cpp.C4B615D83BCC5F5F.idx  gameRules.h.ADD9D6B53A324703.idx  main.cpp.DE01D3484C9964AB.idx  qabstractscrollarea.h.571FDF170583888C.idx  qaction.h.F26049157D8281A5.idx  qapplication.h.B1CE174FB2578681.idx  qchar.h.60E142F890541D84.idx  qcoreapplication.h.4286C0BAB8119DD1.idx  qcoreevent.h.EC6A2D60C4E5A5A4.idx  qdebug.h.D92C3D62FDC984B2.idx  qdialog.h.2B758F0B65AC544B.idx  qevent.h.F02B6DC5BAF952E3.idx  qflags.h.859C0F4E6049856B.idx  qfont.h.0DF959EFBAA6CDC9.idx  qframe.h.14EC6E35D468B9FE.idx  qgraphicsitem.h.30E1A82A9C5AE235.idx  qgraphicsscene.h.D321297BF64FCB39.idx  qgraphicsview.h.14521C480BD836DD.idx  qhash.h.5CF60F205D7003BB.idx  (+27 more)
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/GameWindow_autogen/: deps  mocs_compilation.cpp
build-src-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/GameWindow_autogen/EWIEGA46WW/: moc_Game.cpp  moc_Game.cpp.d  moc_GameField.cpp  moc_GameField.cpp.d  moc_GameOverDialog.cpp  moc_GameOverDialog.cpp.d  moc_GameWindow.cpp  moc_GameWindow.cpp.d  moc_Snake.cpp  moc_Snake.cpp.d
src/: CMakeLists.txt  Game.cpp  Game.h  GameField.cpp  GameField.h  GameOverDialog.cpp  GameOverDialog.h  GameWindow.h  Snake.cpp  Snake.h  cell.cpp  cell.h  gameRules.cpp  main.cpp
src/GameWindow/: Game.h  GameWindow.cpp  GameWindow.h  Snake.cpp  gameRules.cpp  gameRules.h
